--- a/temp-sensors-thingspeak/secrets.h.example
+++ b/temp-sensors-thingspeak/secrets.h.example
@@ -11,6 +11,9 @@
  * =====================================================================================
  */
 
+#define OTA
+#define ONEWIRE
+#define DHTTEMP
 
 // Thingspeak server & key 
 #define TH_SERVER = "api.thingspeak.com";
