bathroom and window OK

--- a/temp-sensors-thingspeak/secrets.h.example
+++ b/temp-sensors-thingspeak/secrets.h.example
@@ -11,20 +11,21 @@
  * =====================================================================================
  */
 
+#ifndef __SECRET_H__
+#define __SECRET_H__
+
 #define OTA
 #define ONEWIRE
 #define DHTTEMP
+#define BME280
 
 // Thingspeak server & key 
-#define TH_SERVER = "api.thingspeak.com";
-#define TH_APIKEY = "";
-
-// wifi setting
-#define WI_SSID = "";
-#define WI_PASSWD = "";
+#define TH_SERVER   "api.thingspeak.com"
+#define TH_APIKEY   "L00DEADBEEF0000L"
 
 // Mosquitto MQTT broker setting
-#define MQTT_SERVER "10.0.0.1"
-#define MQTT_USER ""
+#define MQTT_SERVER   "mqtt.local"
+#define MQTT_USER     ""
 #define MQTT_PASSWORD ""
 
+#endif // __SECRET_H__
