--- a/temp-basement-thingspeak/secrets.h.example
+++ b/temp-basement-thingspeak/secrets.h.example
@@ -11,17 +11,17 @@
  * =====================================================================================
  */
 
+#ifndef __SECRET_H__
+#define __SECRET_H__
 
 // Thingspeak server & key 
-#define TH_SERVER = "api.thingspeak.com";
-#define TH_APIKEY = "";
-
-// wifi setting
-#define WI_SSID = "";
-#define WI_PASSWD = "";
+#define TH_SERVER        "api.thingspeak.com"
+#define TH_APIKEY = "500000000000UH0H";
 
 // Mosquitto MQTT broker setting
-#define MQTT_SERVER "10.0.0.1"
-#define MQTT_USER ""
-#define MQTT_PASSWORD ""
+#define MQTT_SERVER      "mqtt.localdomain"
+#define MQTT_USER        ""
+#define MQTT_PASSWORD    ""
 
+
+#endif // __SECRET_H__
